[gd_scene load_steps=15 format=2]

[ext_resource path="res://classes/entity/enemy/koopa/parakoopa.png" type="Texture" id=1]
[ext_resource path="res://shaders/palette.tres" type="Material" id=2]
[ext_resource path="res://classes/entity/enemy/koopa/parakoopa.gd" type="Script" id=8]
[ext_resource path="res://classes/entity/enemy/koopa/shell_kick.ogg" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 264, 0, 44, 44 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 220, 0, 44, 44 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 44, 44 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 132, 0, 44, 44 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 44, 44 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 44, 0, 44, 44 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 44, 44 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "flying",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 8 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5, 15 )

[node name="Parakoopa" type="AnimatedSprite"]
material = ExtResource( 2 )
frames = SubResource( 8 )
animation = "flying"
frame = 1
script = ExtResource( 8 )

[node name="TopCollision" type="Area2D" parent="."]
position = Vector2( 2, -14 )
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false

[node name="HitDetection" type="CollisionShape2D" parent="TopCollision"]
position = Vector2( 0, 6 )
shape = SubResource( 9 )

[node name="Kick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = 5.0
bus = "SFX"

[node name="Damage" type="Area2D" parent="."]
position = Vector2( 2, 3 )
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="Damage"]
shape = SubResource( 10 )

[connection signal="body_entered" from="TopCollision" to="." method="_on_TopCollision_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
